Initial slides structure

--- a/index.html
+++ b/index.html
@@ -24,8 +24,27 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>Seminário WEB</h1>
+					Ana Luiza Sanches<br>
+					Gabriela Ramalho<br>
+					Matheus Martins<br>
+				</section>
+				<section>
+					<h2>APIS</h2>
+					<ul>
+						<li>File API</li>
+						<p>Possibilita o acesso à arquivos locais selecionados pelo usuário</p>
+						<li>Speech Recognition API</li>
+						<p>Possibilita a entrada por fala em um navegador</p>
+					</ul>
+				</section>
+				<section>
+					<h2>FILE API</h2>
+				</section>
+				<section>
+					<h2>Speech Recognition API</h2>
+				</section>
 			</div>
 		</div>
 
