--- a/index.html
+++ b/index.html
@@ -1,68 +1,80 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+        <title>reveal.js</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/black.css">
+	<link rel="stylesheet" href="css/main.css">
+        <!-- Theme used for syntax highlighting of code -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+        <!-- Printing and PDF exports -->
+        <script>
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        </script>
+    </head>
+    <body>
+        <div class="reveal">
+            <div class="slides">
+                <section>
+                    <h1>Seminário WEB</h1>
+                    Ana Luiza Sanches<br>
+                    Gabriela Ramalho<br>
+                    Matheus Martins<br>
+                </section>
+                <section>
+                    <h2>APIS</h2>
+                    <ul>
+                        <li>File API</li>
+                        <p>Possibilita o acesso à arquivos locais selecionados pelo usuário</p>
+                        <li>Speech Recognition API</li>
+                        <p>Possibilita a entrada por fala em um navegador</p>
+                    </ul>
+                </section>
+                <section data-markdown="fileapi.md"
+                    data-separator="^\n\n\n"
+                    data-separator-vertical="^\n\n"
+                    data-separator-notes="^Note:"
+                    data-charset="iso-8859-15">
+                </section>
+                <section>
+                    <h2>File API - Exemplo</h2>
+                    <div class="container">
+                        <textarea id="file-content"></textarea>
+                        <label for="file">Selecione um arquivo</label>
+                        <input type="file" id="input-file" name="input-file" accept="text/">
+                    </div>
+                    <script src="js/main.js"></script>
+                </section>
+                <section>
+                    <h2>Speech Recognition API</h2>
+                </section>
+            </div>
+        </div>
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>
-					<h1>Seminário WEB</h1>
-					Ana Luiza Sanches<br>
-					Gabriela Ramalho<br>
-					Matheus Martins<br>
-				</section>
-				<section>
-					<h2>APIS</h2>
-					<ul>
-						<li>File API</li>
-						<p>Possibilita o acesso à arquivos locais selecionados pelo usuário</p>
-						<li>Speech Recognition API</li>
-						<p>Possibilita a entrada por fala em um navegador</p>
-					</ul>
-				</section>
-				<section>
-					<h2>FILE API</h2>
-				</section>
-				<section>
-					<h2>Speech Recognition API</h2>
-				</section>
-			</div>
-		</div>
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
-
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+        <script>
+            // More info about config & dependencies:
+            // - https://github.com/hakimel/reveal.js#configuration
+            // - https://github.com/hakimel/reveal.js#dependencies
+            Reveal.initialize({
+                dependencies: [
+                    { src: 'plugin/markdown/marked.js' },
+                    { src: 'plugin/markdown/markdown.js' },
+                    { src: 'plugin/notes/notes.js', async: true },
+                    { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+                ]
+            });
+        </script>
+    </body>
 </html>
