--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <p>Possibilita a entrada por fala em um navegador</p>
                     </ul>
                 </section>
-                <section data-markdown="fileapi.md"
+                <section data-markdown="md/fileapi.md"
                     data-separator="^\n\n\n"
                     data-separator-vertical="^\n\n"
                     data-separator-notes="^Note:"
@@ -56,6 +56,10 @@
                 </section>
                 <section>
                     <h2>Speech Recognition API</h2>
+                </section>
+                <section>
+                    <h2>Can I use?</h2>
+                    <iframe data-src="https://caniuse.com/#search=file%20api"></iframe>
                 </section>
             </div>
         </div>
